--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(rolling-log C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(rolling-log main.c rolling.h ansi.h)
+add_executable(rolling-log main.c rolling.c ansi.h box.h)
